--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -1,3 +1,15 @@
-.app {
-
+.nav {
+    margin: 0 0 10px;
+    padding: 0 0 20px;
+    border-bottom: 1px solid black;
+    a {
+        background: gray;
+        color: white;
+        padding: 4px 10px;
+        border-radius: 2px;
+        &.active {
+            color: #b690f1;
+            background: #363;
+        }
+    }
 }
